--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,8 @@
-<mat-toolbar color="primary"  textColor="blue"  class="app-header" >
-    <mat-toolbar-row>
-    <span>DamascenoAPI</span>
-    <span class="example-spacer"></span>
-
-    <button mat-button [routerLink]="['/login']">Acessar</button>
-    <button mat-button href="/register" [routerLink]="['/register']">Registrar</button>
-    <button mat-button href="/plan" [routerLink]="['/plan']">Planos</button>
-     <!--<button mat-button (click)="{}">Logout</button> -->
-
-    </mat-toolbar-row>
-
-  </mat-toolbar>
+<div class="container">
+  <header class="jumbotron">
+    <p>{{ content }}</p>
+    <h1 style="color: indigo;" >VENHA PARA A DAMASCENO NET</h1>
+    <h2 style="color: rgb(93, 26, 228);"> Planos a partir de R$89,99 </h2>
+    <h2 style="color: mediumpurple;">30% de DESCONTO!!</h2>
+  </header>
+</div>
