--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,32 @@
+<div id="app">
+  <nav class="navbar navbar-expand navbar-dark" style="background-color:rgb(47, 34, 124)" >
+    <a href="#" class="navbar-brand">Damasceno</a>
+    <ul class="navbar-nav mr-auto" routerLinkActive="active">
+      <li class="nav-item">
+        <a href="/home" class="nav-link" routerLink="home">Home </a>
+      </li>
+      <li class="nav-item">
+        <a href="/plan" class="nav-link" *ngIf="isLoggedIn" routerLink="plan">Planos</a>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
+      <li class="nav-item">
+        <a href="/register" class="nav-link" routerLink="register">Registrar</a>
+      </li>
+      <li class="nav-item">
+        <a href="/login" class="nav-link" routerLink="login">Acessar</a>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
+      <li class="nav-item">
+        <a href class="nav-link" (click)="logout()">Sair</a>
+      </li>
+    </ul>
+  </nav>
 
   <div class="container">
     <router-outlet></router-outlet>
   </div>
+</div>
