--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,47 +1,75 @@
-<mat-toolbar color="primary"  textColor="blue" >
-    <mat-toolbar-row>
-    <span>DamascenoAPI</span>
-    <span class="example-spacer"></span>
-  
-    <button mat-button [routerLink]="['/login']">Acessar</button>
-    <button mat-button [routerLink]="['/register']">Registrar</button>
-   
-    </mat-toolbar-row>
-  
-  </mat-toolbar>
-
-<mat-sidenav-container>
-    <mat-sidenav-content>
-      <form [formGroup]="myForm" (ngSubmit)="submitForm()" novalidate>
-        
-        <!-- Name 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Nome" formControlName="loginName">
-        </mat-form-field> -->
-  
-        <!-- Email -->
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="E-mail" formControlName="email">
-        </mat-form-field>
-
-         <!-- Senha -->
-        <mat-form-field class="example-full-width">
-            <input matInput type="password" placeholder="Senha" formControlName="senha">
-          </mat-form-field>
-
-         <!--   <mat-form-field class="example-full-width">
-            <mat-label>Senha</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" formControlName="loginPassword" name="loginPassword">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field> -->
-         
-        <!-- Entrar -->
-        <div class="button-wrapper">
-          <button mat-flat-button color="primary">Entrar</button>
+<div class="col-md-12">
+  <div class="card card-container">
+    <img
+      id="profile-img"
+      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
+      class="profile-img-card"
+    />
+    <form
+      *ngIf="!isLoggedIn"
+      name="form"
+      (ngSubmit)="f.form.valid && onSubmit()"
+      #f="ngForm"
+      novalidate
+    >
+      <div class="form-group">
+        <label for="email">E-mail</label>
+        <input
+          type="text"
+          class="form-control"
+          name="email"
+          [(ngModel)]="form.email"
+          required
+          #username="ngModel"
+        />
+        <div
+          class="alert alert-danger"
+          role="alert"
+          *ngIf="username.errors && f.submitted"
+        >
+          E-mail é obrigatório!
         </div>
-  
-      </form>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+      </div>
+      <div class="form-group">
+        <label for="senha">Senha</label>
+        <input
+          type="password"
+          class="form-control"
+          name="senha"
+          [(ngModel)]="form.senha"
+          required
+          minlength="6"
+          #password="ngModel"
+        />
+        <div
+          class="alert alert-danger"
+          role="alert"
+          *ngIf="password.errors && f.submitted"
+        >
+          <div *ngIf="password.errors.required">Senha é obrigatório!</div>
+          <div *ngIf="password.errors.minlength">
+            Senha deve conter pelo menos 6 digitos
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary btn-block" style="background-color: mediumslateblue;" >
+          Entrar
+        </button>
+      </div>
+      <div class="form-group">
+        <div
+          class="alert alert-danger"
+          role="alert"
+          *ngIf="f.submitted && isLoginFailed"
+        >
+          Dados inválidos!
+        </div>
+      </div>
+    </form>
+
+    <div class="alert alert-success" *ngIf="isLoggedIn">
+      Bem-Vindo ao Sistema!
+    </div>
+  </div>
+</div>
