--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -1,30 +1,31 @@
-<mat-toolbar color="primary"  textColor="blue"  class="app-header" >
-    <mat-toolbar-row>
-        <span>Damasceno APP</span>
-        <span class="example-spacer"></span>
-        <button mat-button (click)="{}">Logout</button>
-    </mat-toolbar-row>
+<div class="row">
+    <div class="col-sm-6">
 
-  </mat-toolbar>
+        <div  *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Plano Selecionado Com Sucesso!</strong> Este plano foi adicionado para a sua conta.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
 
 
-  <div fxLayout="row" fxLayoutAlign="space-evenly stretch" style="padding: 2%;" > 
-    <ng-container *ngFor="let plano of planos" style="margin: 0.5%;">
-    <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 11px)" 
-    fxFlex.lt-md="0 1 calc(50% - 11px)"
-    fxFlex.lt-sm="100%"
+<form
+    name="form"
+    (ngSubmit)="onSubmit()"
+    #f="ngForm"
+    novalidate
 >
-            <mat-card-header>
-            <mat-card-title>{{plano.nome}}</mat-card-title>
-            <mat-card-subtitle>{{plano.preco}}</mat-card-subtitle>
-            </mat-card-header>
-            
-            <mat-card-content>
-            <p>{{plano.detalhe}}</p>
-            </mat-card-content>
-            <mat-card-actions>
-                <button mat-raised-button color="primary">Selecionar</button>
-            </mat-card-actions>
-        </mat-card>
+
+    <ng-container *ngFor="let plano of planos" style="margin: 0.5%;">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">{{plano.nome}}</h5>
+            <p class="card-subtitle">R$ {{plano.preco}}</p>
+            <p class="card-text">{{plano.detalhe}}</p>
+            <button mat-raised-button color="primary">Selecionar</button>
+        </div>
+    </div>
     </ng-container>
-  </div>
+
+</form>
+
+    </div>
+</div>
